# arxiv-query-mcp

./: .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml
docs/: conf.py  configuration.rst  index.rst  installation.rst  quickstart.rst
docs/api/: config.rst  index.rst  models.rst  server.rst  utils.rst
docs/tools/: fetch-text.rst  get-paper.rst  index.rst  list-by-category.rst  search.rst
src/arxiv_query_mcp/: config.py  models.py  server.py  utils.py
tests/: conftest.py  test_server.py
